--- a/app/src/main/res/xml/authenticator.xml
+++ b/app/src/main/res/xml/authenticator.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <account-authenticator xmlns:android="http://schemas.android.com/apk/res/android"
-    android:accountType=""
-    android:icon=""
+    android:accountType="com.github"
+    android:icon="@drawable/ic_github_acc"
+    android:smallIcon="@drawable/ic_github_acc"
     android:label="GitHub"
-    android:smallIcon="" />
+    />
