--- a/oauthlib/src/main/res/layout/credentials_fragment.xml
+++ b/oauthlib/src/main/res/layout/credentials_fragment.xml
@@ -22,7 +22,9 @@
             android:id="@+id/userName"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="@string/name" />
+            android:hint="@string/name"
+            android:inputType="textAutoComplete"
+            android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -41,7 +43,9 @@
             android:id="@+id/userPass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/pass" />
+            android:hint="@string/pass"
+            android:inputType="textPassword|textWebPassword"
+            android:singleLine="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -53,12 +57,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:fontFamily="monospace"
         android:text="@string/login"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        android:typeface="sans"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+        android:textColor="?android:attr/textColorPrimaryNoDisable"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
