--- a/oauthlib/src/main/res/layout/second_factor_fragment.xml
+++ b/oauthlib/src/main/res/layout/second_factor_fragment.xml
@@ -36,12 +36,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:fontFamily="monospace"
         android:text="@string/send"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        android:typeface="sans"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+        android:textColor="?android:attr/textColorPrimaryNoDisable"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
