--- a/oauthlib/src/main/res/xml/authenticator.xml
+++ b/oauthlib/src/main/res/xml/authenticator.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <account-authenticator xmlns:android="http://schemas.android.com/apk/res/android"
-    android:accountType="com.github"
+    android:accountType="com.github.account"
     android:icon="@drawable/ic_github_acc"
     android:smallIcon="@drawable/ic_github_acc"
-    android:label="GitHub"
+    android:label="@string/AccTitle"
+    android:accountPreferences="@xml/prefs"
     />
