--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -49,7 +49,7 @@
     </fragment>
     <activity
         android:id="@+id/conductorActivity"
-        android:name="ru.grakhell.userviewer.ui.activity.ConductorActivity"
+        android:name="ru.grakhell.userviewer.ui.activity.view.ConductorActivity"
         android:label="activity_main"
         tools:layout="@layout/activity_main" />
     <fragment
